about and services sections

--- a/index.html
+++ b/index.html
@@ -33,6 +33,44 @@
                 <img src="./assets/hero image.png" alt="Imagen principal">
             </div>
         </section>
+
+        <section class="about">
+            <div class="grid-container">
+                <img src="./assets/freepik__the-style-is-candid-image-photography-with-natural__49398.png" alt="Imagen principal">
+                <img src="./assets/freepik__the-style-is-candid-image-photography-with-natural__49399.png" alt="">
+                <img src="./assets/freepik__the-style-is-candid-image-photography-with-natural__49401.png" alt="">
+                <img src="./assets/freepik__the-style-is-candid-image-photography-with-natural__49402.png" alt="" id="main-img">
+            </div>
+        <div class="content">
+            <h1>¿Qué es My English Teacher?</h1>
+            <p>En My English Teacher ofrecemos clases de inglés personalizadas para todas las edades, desde niños de 4 años hasta adultos mayores.</p>
+            <p>Aquí no importa tu nivel: si estás empezando desde cero o si solo necesitas reforzar un tema específico, estás en el lugar correcto.</p>
+            <p>Con más de 11 años de experiencia enseñando y 5 años en modalidad virtual, te garantizamos un aprendizaje dinámico, práctico y enfocado en tus metas personales, escolares o profesionales.</p>
+        </div>
+    </section>
+
+        <section id="services">
+            <h2>¿QUÉ TE OFRECEMOS?</h2>
+            <div class="container">
+                <div class="card">
+                    <h2>Clases Virtuales Personalizadas</h2>
+                    <p>📚 Para niños desde los 4 años, adolescentes y adultos</p>
+                    <p>📖 Refuerzo escolar en inglés: apoyo con tareas, presentaciones y exposiciones</p>
+                </div>
+
+                <div class="card">
+                    <h2>Preparación Especializada</h2>
+                    <p>🎓 Examen de ciudadanía en EE. UU.</p>
+                    <p>📝 Traducción certificada de documentos por traductora jurada</p>
+                </div>
+
+                <div class="card">
+                    <h2>Pronunciación y Conversación</h2>
+                    <p>🗣️ Clases prácticas para mejorar fluidez y confianza</p>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer id="contact">
         <h2>¡Contáctanos!</h2>
