--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My English Teacher es un servicio de clases de inglés virtuales para niños, adolescentes y adultos. Con nuestro servicio, puedes aprender inglés de manera personalizada y adaptada a tu ritmo y estilo de aprendizaje.">
     <title>My English Teacher</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -26,7 +27,7 @@
                 <p>Clases personalizadas para niños, adolescentes y adultos. Desde cualquier parte del mundo.</p>
                 <p>¡Tu maestra de inglés virtual está aquí para ayudarte a avanzar!</p>
                 <div id="hero-btn">
-                    <button>Reserva tu primera clase hoy</button>
+                    <button onclick="location.href='form.html'">Reserva tu primera clase hoy</button>
                 </div>
             </div>
             <div id="hero-img">
